--- a/index.Rmd
+++ b/index.Rmd
@@ -43,3 +43,25 @@ p <- ggplot(data_sub, aes(x = Team, y = (Won/(Won+Drawn+Lost)*100))) + geom_bar(
         print(p)
 ```
 
+--- .class #id 
+
+## Slide 4: Example plot of a single country (e.g. England) over all the year of the World Cup (data: 1930 - 2006)
+
+```{r echo = F, results = 'asis', fig.height=6, fig.width=8}
+
+library(ggplot2)
+data<-read.csv("world_cup_data.csv")
+names(data) <- c("Year","Team", "ISO.code","Goals.for", "Goals.against", "Penalties","Matches", "Shots.on.goal", "Shots.wide", "Free.kicks", "Offside","Corners", "Won", "Drawn", "Lost")
+# Year <- unique(sort(data$Year))
+# Country <- unique(sort(data$Team))
+data_sub<-subset(data, Team == "England")                                
+p <- ggplot(data_sub, aes(x = Year, y = (Won/(Won+Drawn+Lost)*100))) + geom_bar(stat = "identity")+
+        scale_fill_manual("", values=c("target"="darkgrey","try"="blue"))+
+        scale_y_continuous(breaks=seq(0,100,10),limits=c(0,100),"% Matches won")+
+        scale_x_continuous(breaks=seq(1930,2010,4), limits=c(1930,2010),"Year")+
+        theme(axis.title.x = element_text(size = 14, vjust = -1))+
+        theme(axis.title.y = element_text(size = 14, angle=90, vjust=0))+
+        theme(axis.text.x = element_text(size = 10,colour="black",vjust = 0, angle = 90))+
+        theme(axis.text.y = element_text(size = 12,colour="black"))
+        print(p)
+```
