--- a/index.Rmd
+++ b/index.Rmd
@@ -71,7 +71,7 @@ p <- ggplot(data_sub, aes(x = Year, y = (Won/(Won+Drawn+Lost)*100))) + geom_bar(
 
 ## Slide 5: Example calculation of percentage of matches won
 
-```{r opts.label = 'interactive', results = 'markup'}
+```{r opts.label = 'interactive', results = 'asis'}
 matches_won<-5
 matches_drawn<- 2
 matches_lost <- 2
@@ -84,7 +84,7 @@ result
 --- &interactive
 ## Results = Markup
 
-```{r opts.label = 'interactive', results = 'markup'}
+```{r opts.label = 'interactive', results = 'asis'}
 x <-11+12
 x
 ```
