--- a/index.Rmd
+++ b/index.Rmd
@@ -78,7 +78,7 @@ matches_lost <- 2
 matches_played <- matches_won+matches_drawn+matches_lost
 percentage_wins <- as.integer((matches_won/matches_played)*100)
 result <-paste("Percentage of matches won = " , percentage_wins)
-print(result)
+barplot(percentage_wins, ylim=c(0,100), main = "% wins")
 ```
 
 --- &interactive
