--- a/index.Rmd
+++ b/index.Rmd
@@ -71,6 +71,11 @@ p <- ggplot(data_sub, aes(x = Year, y = (Won/(Won+Drawn+Lost)*100))) + geom_bar(
 
 ## Slide 5: Example calculation of percentage of matches won
 
+This does not run in github but runs in Rstudio
+I think this is a recognised problem.
+See: https://github.com/ramnathv/slidify/issues/360
+
+
 ```{r opts.label = 'interactive', results = 'asis'}
 matches_won<-5
 matches_drawn<- 2
