--- a/index.Rmd
+++ b/index.Rmd
@@ -20,6 +20,8 @@ knit        : slidify::knit2slides
         b) A plot of percentage winds by a single country across all years
 4. Data downloaded from: 
         http://www.theguardian.com/news/datablog/2010/may/05/world-cup-historical-statistics
+5. The interactive Slide 5 does not run in github but runs in Rstudio
+I think this is a recognised problem. See: https://github.com/ramnathv/slidify/issues/360
 
 
 --- .class #id 
@@ -70,10 +72,6 @@ p <- ggplot(data_sub, aes(x = Year, y = (Won/(Won+Drawn+Lost)*100))) + geom_bar(
 --- &interactive
 
 ## Slide 5: Example calculation of percentage of matches won
-
-This does not run in github but runs in Rstudio
-I think this is a recognised problem.
-See: https://github.com/ramnathv/slidify/issues/360
 
 
 ```{r opts.label = 'interactive', results = 'asis'}
